<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.example</groupId>
	<artifactId>graaljs-test</artifactId>
	<packaging>war</packaging>
	<name>GraalJS Test</name>
	<version>1.0.0</version>
	<description />
	<url />
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<tomcat.version>9.0.82</tomcat.version>
		<maven.war.plugin>3.3.2</maven.war.plugin>
		<maven.compiler.plugin>3.11.0</maven.compiler.plugin>
		<maven.resources.plugin>3.3.1</maven.resources.plugin>
		<jvm.add-opens>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</jvm.add-opens>
	</properties>
	<dependencies>
		<!-- javax -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>2.2.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- GraalVM JS -->
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>polyglot</artifactId>
			<version>23.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.js</groupId>
			<artifactId>js-scriptengine</artifactId>
			<version>23.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>js-community</artifactId>
			<version>23.1.1</version>
			<type>pom</type>
			<!-- <scope>runtime</scope> -->
		</dependency>

		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>${tomcat.version}</version>
			<scope>test</scope>
		</dependency>

	</dependencies>
	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>qbpms.config</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>qbpms.config</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven.war.plugin}</version>
				<configuration>
					<webResources>
						<webResource>
							<directory> ${basedir}/src/main/webapp</directory>
							<filtering>true</filtering>
							<includes>
								<include>WEB-INF/web.xml</include>
							</includes>
						</webResource>
					</webResources>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin}</version>
				<configuration>
					<release>17</release>
					<encoding>UTF-8</encoding>
					<debug>true</debug>
					<parameters>false</parameters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven.resources.plugin}</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>development</id>
			<properties>
				<debug>true</debug>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-war-plugin</artifactId>
						<version>${maven.war.plugin}</version>
						<configuration>
							<webResources>
								<webResource>
									<directory> ${basedir}/src/main/webapp-debug</directory>
									<filtering>false</filtering>
									<includes>
										<include>**/*</include>
									</includes>
								</webResource>
								<webResource>
									<directory> ${basedir}/src/main/webapp</directory>
									<filtering>true</filtering>
									<includes>
										<include>WEB-INF/web.xml</include>
									</includes>
								</webResource>
							</webResources>
							<archive>
								<addMavenDescriptor>false</addMavenDescriptor>
							</archive>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>production</id>
			<properties>
				<debug>false</debug>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>${maven.compiler.plugin}</version>
						<configuration>
							<release>17</release>
							<encoding>UTF-8</encoding>
							<debug>false</debug>
							<parameters>false</parameters>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<reporting>
	</reporting>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
		</pluginRepository>
	</pluginRepositories>
</project>